change: upped first and last avail_cards inline margin to fix position issues on smaller devices.

--- a/src/pages/new_home_style.css
+++ b/src/pages/new_home_style.css
@@ -618,6 +618,7 @@ p.title_venn {
 
     mask-image: url(../assets/images/softhorizontal.png);
     mask-size: cover;
+    mask-position: center;
   }
   .avail_card {
     --scaling: 1;
@@ -625,10 +626,10 @@ p.title_venn {
   }
 
   .avail_card:nth-child(1) {
-    margin-left: calc(50dvw - 10rem);
+    margin-left: calc(50vw);
   }
   .avail_card:nth-child(4) {
-    margin-right: calc(50dvw - 10rem);
+    margin-right: calc(50vw);
   }
 
   .avail_cards_section[data-position="start"]::before{
@@ -636,6 +637,12 @@ p.title_venn {
   }
   .avail_cards_section[data-position="end"]::after{
     opacity: 0;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .avail_cards_container {
+    mask-image: none !important;
   }
 }
 
@@ -1554,15 +1561,15 @@ p.mission_body {
       overflow-x: auto;
       overflow-y: hidden;
       scroll-snap-type: x mandatory;
-      mask-image: linear-gradient(to right, rgba(255, 255, 255, 0) 0%,rgba(255, 255, 255, 1) 20%, 80%,rgba(255, 255, 255, 0) 100%);
+      mask-image: linear-gradient(to right, rgba(255, 255, 255, 0) 0%,rgba(255, 255, 255, 1) 20%, rgba(255, 255, 255, 1) 80%,rgba(255, 255, 255, 0) 100%);
       /* mask-size: 100%;
       mask-position: center; */
     }
     .avail_card:nth-child(1) {
-      margin-left: calc(50dvw - 10rem);
+      margin-left: calc(50vw);
     }
     .avail_card:nth-child(4) {
-      margin-right: calc(50dvw - 10rem);
+      margin-right: calc(50vw);
     }
     
     .avail_card {
